examples/errors/cant_use_arg_from_other_function.jj
func f1
with x

func f2
with y
{
    println(x);
}

func main
{
    f2(2);
}